--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "express": "^4.21.1",
     "framer-motion": "^11.11.11",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
