--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.454.0",
     "mongoose": "^8.8.1",
     "next": "15.0.2",
+    "next-recaptcha-v3": "^1.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swiper": "^11.1.14",
