--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.8.1",
     "next": "15.0.2",
     "next-recaptcha-v3": "^1.5.0",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swiper": "^11.1.14",
